@@ -2,6 +2,7 @@ package com.example.model;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.sql.Blob;
 import java.sql.SQLException;
@@ -25,61 +26,66 @@ import com.fasterxml.jackson.annotation.JsonIgnore;
 public class User {
 
     @Id
+    @JsonIgnore
     private Long studentId;
-    
+
     private String name;
     private String surname1;
     private String surname2;
     private String dni;
     @ElementCollection(fetch = FetchType.EAGER)
-	private List<String> roles;
+    private List<String> roles;
     @JsonIgnore
     private Blob photo;
     private boolean isCandidate;
-    private int votes;
     @JsonIgnore
     private String email;
     @JsonIgnore
-	private String password;
+    private String password;
+    @JsonIgnore
+    private List<String> fcmToken = new ArrayList<String>();
 
     @ManyToMany(fetch = FetchType.EAGER)
-    @JoinTable(
-        name = "user_subject",
-        joinColumns = @JoinColumn(name = "userId"),
-        inverseJoinColumns = @JoinColumn(name = "subjectId"))
+    @JoinTable(name = "user_subject", joinColumns = @JoinColumn(name = "userId"), inverseJoinColumns = @JoinColumn(name = "subjectId"))
     private Collection<Subject> subjects = new ArrayList<Subject>();
 
-    public User() {}
-    public User(Long studentId, String name, String surname1, String surname2, String dni, String email, String password) {
+    public User() {
+    }
+
+    public User(Long studentId, String name, String surname1, String surname2, String dni, String email,
+            String password) {
         this.studentId = studentId;
-        this.name= name;
-        this.surname1=surname1;
-        this.surname2=surname2;
-        this.dni=dni;
-        votes = 0;
+        this.name = name;
+        this.surname1 = surname1;
+        this.surname2 = surname2;
+        this.dni = dni;
         isCandidate = false;
         this.email = email;
         this.password = password;
         try {
-            // Leer la imagen como bytes
-            File file = new File("src/main/java/com/example/model/image.png");
-            byte[] imageBytes = Files.readAllBytes(file.toPath());
+            // Usar ClassLoader para cargar el archivo desde el classpath
+            InputStream imageStream = getClass().getClassLoader().getResourceAsStream("image.png");
+            if (imageStream != null) {
+                // Leer los bytes de la imagen
+                byte[] imageBytes = imageStream.readAllBytes();
+                imageStream.close();
 
-            // Crear un Blob a partir de los bytes
-            Blob imageBlob = new SerialBlob(imageBytes);
+                // Crear un Blob a partir de los bytes
+                Blob imageBlob = new SerialBlob(imageBytes);
 
-            photo = imageBlob;
-
+                photo = imageBlob;
+            } else {
+                System.err.println("No se encontró el archivo image.png en el classpath.");
+            }
         } catch (IOException | SQLException e) {
             e.printStackTrace();
         }
     }
 
     public User(Long studentId, String name, String surname1, String surname2, String dni, Blob photo, String email) {
-        this(studentId, name, surname1, surname2, dni,email,"123456");
-        this.photo=photo;
+        this(studentId, name, surname1, surname2, dni, email, "123456");
+        this.photo = photo;
     }
-
 
     public Long getStudentId() {
         return studentId;
@@ -133,14 +139,6 @@ public class User {
         this.isCandidate = isCandidate;
     }
 
-    public int getVotes() {
-        return votes;
-    }
-
-    public void setVotes(int votes) {
-        this.votes = votes;
-    }
-
     public Long getId() {
         return this.studentId;
     }
@@ -148,31 +146,33 @@ public class User {
     public Collection<Subject> getSubjects() {
         return subjects;
     }
+
     public String getEmail() {
         return email;
     }
+
     public List<String> getRoles() {
         return roles;
     }
+
     public void setRoles(List<String> roles) {
         this.roles = roles;
     }
 
     public String getPassword() {
-		return password;
-	}
+        return password;
+    }
 
-	public void setPassword(String password) {
-		this.password = password;
-	}
-    
+    public void setPassword(String password) {
+        this.password = password;
+    }
 
-    
+    public List<String> getFcmToken() {
+        return fcmToken;
+    }
 
-    
+    public void addFcmToken(String fcmToken) {
+        this.fcmToken.add(fcmToken);
+    }
 
-    
-
-    
-    
 }
